Update Twitter Followers Bulk Extraction Script - P.ipynb

--- a/Twitter Followers Bulk Extraction Script - P.ipynb
+++ b/Twitter Followers Bulk Extraction Script - P.ipynb
@@ -30,10 +30,10 @@
    "outputs": [],
    "source": [
     "#auth\n",
-    "consumer_key = 'wwdiE5ykBjzTchyiRsaBoTlsM'\n",
-    "consumer_secret = 'Yvhc1WwAMecWRXx7Zavyzr9L1YhpkyywhbHCs5LEoniO6FrB6H'\n",
-    "access_token = '805275096713674752-66JCPlGs5y01sjlTcazy1v0NTR2K3pZ'\n",
-    "access_token_secret = 'yhdD0Xakqw4qHKatJNo1hy4ud3vHCImxAA74Gp8A2eaW1'\n",
+    "consumer_key = 'xxxxxxxxxxxxxxx'\n",
+    "consumer_secret = 'xxxxxxxxxxxxxx'\n",
+    "access_token = 'xxxxxxxxxxxxxx'\n",
+    "access_token_secret = 'xxxxxxxxxxxxxxxxxxxx'\n",
     "\n",
     "# OAuthHandler using the keys and tokens\n",
     "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
