Update and rename validator info Fin-public (1).ipynb to Validator Info Gathering- P.ipynb

--- a/Validator Info Gathering- P.ipynb
+++ b/Validator Info Gathering- P.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Validator info collection script"
+    "# Key info Gathering from masisve amount of Emails"
    ]
   },
   {
